--- a/attribution.html
+++ b/attribution.html
@@ -26,6 +26,8 @@
         <li>"<a href="https://meta.wikimedia.org/wiki/File:HFung_April_2010_wikimedia_03_10_841.jpg">HFung April 2010 wikimedia 03 10 841</a>" by <a href="http://lanehartwell.com/">Lane Hartwell</a> on behalf of the <a href="https://wikimediafoundation.org/wiki/Contact_us">Wikimedia Foundation</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Maryana_Pinchuk_007_-_Wikimedia_Foundation_Oct11.jpg">Maryana Pinchuk 007 - Wikimedia Foundation Oct11</a>" by <a href="https://commons.wikimedia.org/wiki/User:Guillom">Guillaume Paumier</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Moran,_Wes_April_2015.jpg">Moran, Wes April 2015</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Beaudette,_Philippe_4.11.2013.jpg">Beaudette, Philippe 4.11.2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Garfield_Byrd_003_-_Wikimedia_Foundation_Oct11.jpg">Garfield Byrd 003 - Wikimedia Foundation Oct11</a>" by <a href="https://commons.wikimedia.org/wiki/User:Guillom">Guillaume Paumier</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY 3.0</a>.</li>
       </ul>
     </section>
   </body>
