--- a/attribution.html
+++ b/attribution.html
@@ -31,6 +31,8 @@
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Dr._James_Heilman.jpg">Dr. James Heilman</a>" by <a href="https://commons.wikimedia.org/wiki/User:VGrigas_(WMF)">VGrigas (WMF)</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Kelly_Battles_-_January_2016_by_Myleen_Hollero.jpg">Kelly Battles - January 2016 by Myleen Hollero</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Arnnon_Geshuri_-_January_2016_by_Myleen_Hollero.jpg">Arnnon Geshuri - January 2016 by Myleen Hollero</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Ventura,_Sylvia_December_2015_01.jpg">Ventura, Sylvia December 2015 01</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:María_Sefidari.JPG">Mar&iacute;a Sefidari</a>" by <a href="https://commons.wikimedia.org/wiki/User:LauraHale">LauraHale</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
       </ul>
     </section>
   </body>
