--- a/attribution.html
+++ b/attribution.html
@@ -33,6 +33,10 @@
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Arnnon_Geshuri_-_January_2016_by_Myleen_Hollero.jpg">Arnnon Geshuri - January 2016 by Myleen Hollero</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Ventura,_Sylvia_December_2015_01.jpg">Ventura, Sylvia December 2015 01</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:María_Sefidari.JPG">Mar&iacute;a Sefidari</a>" by <a href="https://commons.wikimedia.org/wiki/User:LauraHale">LauraHale</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Villa,_Luis_4.11.2013.jpg">Villa, Luis 4.11.2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Siko_Bouterse-8.jpg">Siko Bouterse-8</a>" by <a href="https://commons.wikimedia.org/wiki/User:Matthew_(WMF)">Matthew (WMF)</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Koval,_Anna_Aug_2013.jpg">Koval, Anna Aug 2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Hocutt,_Frances_March_2015.jpg">Hocutt, Frances March 2015</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
       </ul>
     </section>
   </body>
