--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
           <li>
             <input type="checkbox" name="filter" id="unrest" /> <label for="unrest">General unrest</label>
           </li>
+          <li>
+            <input type="checkbox" name="filter" id="lila" /> <label for="lila">Lila Tretikov</label>
+          </li>
         </ul>
       </header>
       <article class="timeline">
-        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change', 'lila']">
           <div class="timeline-icon green">
             <i class="fa fa-plus"></i>
           </div>
@@ -434,7 +437,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry top-margin-cancel" data-category="['knowledge-engine']">
+        <div class="timeline-entry top-margin-cancel" data-category="['knowledge-engine', 'lila']">
           <div class="timeline-icon grey">
             <i class="fa fa-pencil"></i>
           </div>
@@ -661,7 +664,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -675,7 +678,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -689,7 +692,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
           <div class="timeline-icon grey">
             <i class="fa fa-pencil"></i>
           </div>
@@ -723,7 +726,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
