Show all button

--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
       <header class="timeline-filter">
         <ul>
           <li>
+            <input type="checkbox" name="filter-shortcut" id="all" checked /> <label for="all">All</label>
+          </li>
+          <li>
             <input type="checkbox" name="filter" id="knowledge-engine" checked /> <label for="knowledge-engine">Knowledge Engine</label>
           </li>
           <li>
-            <input type="checkbox" name="filter" id="staff-change" /> <label for="staff-change">Staff changes</label>
+            <input type="checkbox" name="filter" id="staff-change" checked /> <label for="staff-change">Staff changes</label>
           </li>
           <li>
-            <input type="checkbox" name="filter" id="unrest" /> <label for="unrest">General unrest</label>
+            <input type="checkbox" name="filter" id="unrest" checked /> <label for="unrest">General unrest</label>
           </li>
           <li>
-            <input type="checkbox" name="filter" id="lila" /> <label for="lila">Lila Tretikov</label>
+            <input type="checkbox" name="filter" id="lila" checked /> <label for="lila">Lila Tretikov</label>
           </li>
         </ul>
       </header>
