--- a/attribution.html
+++ b/attribution.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
+    <meta charset="utf-8" />
     <title>Wikimedia Discovery timeline attribution</title>
     <meta name="description" content="Attribution for the timeline of events surrounding the Wikimedia Discovery project">
     <meta name="author" content="Molly White">
