Link Philippe and SWalling's accounts

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </a>
               <span class="caption">Steven Walling <span class="attribution-link"><a href="./attribution.html">(attribution)</a></span></span>
             </div>
-            <p>Steven Walling, Product Manager of the Growth team, leaves the Wikimedia Foundation after four years of employment.</p>
+            <p>Steven Walling, (<a href="https://en.wikipedia.org/wiki/User:Steven_Walling">User:Steven Walling</a>), Product Manager of the Growth team, leaves the Wikimedia Foundation after four years of employment.</p>
           </div>
         </div>
 
@@ -509,7 +509,7 @@
               </a>
               <span class="caption">Philippe Beaudette <span class="attribution-link"><a href="./attribution.html">(attribution)</a></span></span>
             </div>
-            <p>Philippe Beaudette, Director of Community Advocacy, leaves the Wikimedia Foundation after six years of employment, citing health reasons.</p>
+            <p>Philippe Beaudette, (<a href="https://en.wikipedia.org/wiki/User:Philippe">User:Philippe</a>), Director of Community Advocacy, leaves the Wikimedia Foundation after six years of employment, citing health reasons.</p>
             <ul>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2015-August/078991.html">Philippe Beaudette announces his departure on <i>Wikimedia-l</i></a></li>
             </ul>
