--- a/attribution.html
+++ b/attribution.html
@@ -14,7 +14,7 @@
     <header class="page-header">
       <h1>Wikimedia Discovery timeline attribution</h1>
     </header>
-    <section>
+    <section class="attribution">
       <ul>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Lila_Tretikov_April_2014_(5)_crop.jpg">Lila Tretikov April 2014 (5) crop</a>" by <a href="http://lanehartwell.com/">Lane Hartwell</a> on behalf of the <a href="https://wikimediafoundation.org/wiki/Contact_us">Wikimedia Foundation</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Sumana_Harihareswara_021_-_Berlin_2011.jpg">Sumana Harihareswara 021 - Berlin 2011</a>" by <a href="https://commons.wikimedia.org/wiki/User:Guillom">Guillaume Paumier</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY 3.0</a>.</li>
@@ -32,6 +32,7 @@
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Zimmerman,_Jared_June_2013.jpg">Zimmerman, Jared June 2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Moran,_Wes_April_2015.jpg">Moran, Wes April 2015</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Bamba,_Vibha_Feb_2014.jpg">Bamba, Vibha Feb 2014</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Dineva,_Boryana_September_2015.jpg">Dineva, Boryana September 2015</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Beaudette,_Philippe_4.11.2013.jpg">Beaudette, Philippe 4.11.2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Garfield_Byrd_003_-_Wikimedia_Foundation_Oct11.jpg">Garfield Byrd 003 - Wikimedia Foundation Oct11</a>" by <a href="https://commons.wikimedia.org/wiki/User:Guillom">Guillaume Paumier</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Dr._James_Heilman.jpg">Dr. James Heilman</a>" by <a href="https://commons.wikimedia.org/wiki/User:VGrigas_(WMF)">VGrigas (WMF)</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
