--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               </a>
               <span class="caption">Wes Moran <span class="attribution-link"><a href="./attribution.html">(attribution)</a></span></span>
             </div>
-            <p>Wes Moran joins the Wikimedia Foundation as the Vice President of Search &amp; Discovery. Previously, he was the Vice President of User Experience at <a href="https://en.wikipedia.org/wiki/SugarCRM">SugarCRM</a>.</p>
+            <p>Wes Moran joins the Wikimedia Foundation as the Vice President of Search &amp; Discovery. Previously, he was the Vice President of User Experience at <a href="https://en.wikipedia.org/wiki/SugarCRM">SugarCRM</a> and had consulted with the Wikimedia Foundation.</p>
           </div>
         </div>
 
