Fix unclosed tag

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <h2>First publication of Wikimedia Fundation's "Call to Action" to the broader community</h2>
             <p>The "<a href="https://meta.wikimedia.org/wiki/Communications/State_of_the_Wikimedia_Foundation#2015_Call_to_Action">Call to Action</a>" is first outlined publicly. The list is divided into subcategories: Improve technology &amp; execution, focus on knowledge &amp; community, support innovation &amp; new knowledge.</p>
             <ul>
-              <li><a href="https://meta.wikimedia.org/wiki/Communications/State_of_the_Wikimedia_Foundation#2015_Call_to_Action">"Call to Action" section in the 2015 State of the Wikimedia Foundation document</li>
+              <li><a href="https://meta.wikimedia.org/wiki/Communications/State_of_the_Wikimedia_Foundation#2015_Call_to_Action">"Call to Action" section in the 2015 State of the Wikimedia Foundation document</a></li>
             </ul>
           </div>
         </div>
