Note that Erik was also the DD

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               </a>
               <span class="caption">Erik M&ouml;ller <span class="attribution-link"><a href="./attribution.html">(attribution)</a></span></span>
             </div>
-            <p>Erik M&ouml;ller (<a href="https://meta.wikimedia.org/wiki/User:Eloquence">User:Eloquence</a>), Vice President of Product and Strategy, leaves the Wikimedia Foundation after seven years of employment.</p>
+            <p>Erik M&ouml;ller (<a href="https://meta.wikimedia.org/wiki/User:Eloquence">User:Eloquence</a>), Vice President of Product and Strategy and Deputy Director, leaves the Wikimedia Foundation after seven years of employment.</p>
             <ul>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2015-April/077516.html">Lila Tretikov announces Erik M&ouml;ller's departure on <i>Wikimedia-l</i></a></li>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2015-April/077517.html">Erik M&ouml;ller's departure email on <i>Wikimedia-l</i></a></li>
