Add Eric Moller's Facebook comment on VE. Also mirror Facebook comments for people who don't have accounts or would rather not visit the site. Closes #13.

--- a/attribution.html
+++ b/attribution.html
@@ -2,17 +2,18 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8" />
-    <title>Wikimedia Discovery timeline attribution</title>
+    <title>Wikimedia timeline attribution</title>
     <meta name="description" content="Attribution for the timeline of events surrounding the Wikimedia Discovery project">
     <meta name="author" content="Molly White">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
   <body>
     <header class="page-header">
-      <h1>Wikimedia Discovery timeline attribution</h1>
+      <h1>Wikimedia timeline attribution</h1>
     </header>
     <section class="attribution">
       <ul>
