Links for Why we changed replies

--- a/index.html
+++ b/index.html
@@ -1601,6 +1601,8 @@
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082150.html">Brion Vibber's email to <i>Wikimedia-l</i> in the "Why we changed" thread</a></li>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082181.html">Erik M&ouml;ller's email to <i>Wikimedia-l</i> in the "Why we changed" thread</a></li>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082183.html">Tim Starling's email to <i>Wikimedia-l</i> in the "Why we changed" thread</a></li>
+              <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082204.html">Faidon Liambotis' email to <i>Wikimedia-l</i> in the "Why we changed" thread</a></li>
+              <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082209.html">Giuseppe Lavagetto's email to <i>Wikimedia-l</i> in the "Why we changed" thread</a></li>
             </ul>
           </div>
         </div>
