Added blog posting from Oliver explaining some background

--- a/index.html
+++ b/index.html
@@ -1651,6 +1651,7 @@
             <p>Oliver Keyes (<a href="https://en.wikipedia.org/wiki/User:Ironholds">User:Ironholds</a>), Researcher, leaves the Wikimedia Foundation after five years of employment. In his departure email, he writes that this comes after "12 months of continual stress, losses and workplace fear" and that he has "no confidence" in the ability of the Board of Trustees to effectively solve the current crisis.</p>
             <ul>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2016-February/082313.html">Email from Oliver Keyes to <i>Wikimedia-l</i>: One Last Ride</a></li>
+              <li><a href="https://ironholds.org/blog/loyalty-dissent-and-exit/">Blog posting from Oliver explaining some background</a></li>
             </ul>
           </div>
         </div>
