Add Asaf's WW comment

--- a/etc/heilman-KE-comment.html
+++ b/etc/heilman-KE-comment.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8" />
-    <title>Wikimedia timeline - Möller comment</title>
+    <title>Wikimedia timeline - Heilman comment</title>
     <meta name="description" content="Reproduction of Facebook comment">
     <meta name="author" content="Molly White">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600' rel='stylesheet' type='text/css'>
