Update description too

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Wikimedia timeline of recent events</title>
-    <meta name="description" content="A timeline of recent events surrounding the Wikimedia projects">
+    <meta name="description" content="The Wikimedia Foundation has recently suffered from lack of communication with the editing community, poor transparency, and sudden loss of staff members.">
     <meta name="author" content="Molly White">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
