Clean up entry categories

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </header>
       </div>
       <article class="timeline">
-        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change', 'lila']">
+        <div class="timeline-entry" data-category="['staff-change', 'lila']">
           <div class="timeline-icon green">
             <i class="fa fa-plus"></i>
           </div>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['unrest', 'lila']">
+        <div class="timeline-entry" data-category="['unrest', 'lila', 'knowledge-engine']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -204,7 +204,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
+        <div class="timeline-entry" data-category="['lila']">
           <div class="timeline-icon grey">
             <i class="fa fa-pencil"></i>
           </div>
@@ -248,7 +248,6 @@
             </ul>
           </div>
         </div>
-
 
         <div class="timeline-entry" data-category="['knowledge-engine']">
           <div class="timeline-icon grey">
@@ -362,7 +361,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
+        <div class="timeline-entry" data-category="['lila']">
           <div class="timeline-icon grey">
             <i class="fa fa-pencil"></i>
           </div>
@@ -502,7 +501,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine']">
+        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
           <div class="timeline-icon grey">
             <i class="fa fa-pencil"></i>
           </div>
@@ -793,7 +792,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry short" data-category="['staff-change']">
+        <div class="timeline-entry short" data-category="['staff-change', 'unrest']">
           <div class="timeline-icon red">
             <i class="fa fa-minus"></i>
           </div>
@@ -951,7 +950,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change']">
           <div class="timeline-icon red">
             <i class="fa fa-pause"></i>
           </div>
@@ -968,7 +967,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
           <div class="timeline-icon green">
             <i class="fa fa-users"></i>
           </div>
@@ -1024,7 +1023,7 @@
           </div>
         </div>  
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['unrest']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -1080,7 +1079,7 @@
           </div>
         </div>  
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['unrest']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -1126,7 +1125,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['unrest']">
           <div class="timeline-icon grey">
             <i class="fa fa-envelope-o"></i>
           </div>
@@ -1141,7 +1140,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
           <div class="timeline-icon red">
             <i class="fa fa-users"></i>
           </div>
@@ -1156,7 +1155,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
+        <div class="timeline-entry" data-category="['unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -1170,7 +1169,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
+        <div class="timeline-entry" data-category="['unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -1209,7 +1208,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'staff-change']">
+        <div class="timeline-entry" data-category="['staff-change']">
           <div class="timeline-icon green">
             <i class="fa fa-users"></i>
           </div>
@@ -1243,7 +1242,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['knowledge-engine', 'unrest', 'lila']">
+        <div class="timeline-entry" data-category="['unrest', 'lila']">
           <div class="timeline-icon red">
             <i class="fa fa-frown-o"></i>
           </div>
@@ -1257,7 +1256,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['lila', 'knowledge-engine', 'unrest']">
+        <div class="timeline-entry" data-category="['lila', 'unrest']">
           <div class="timeline-icon red">
             <i class="fa fa-envelope"></i>
           </div>
@@ -1272,7 +1271,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change']">
           <div class="timeline-icon red">
             <i class="fa fa-minus"></i>
           </div>
@@ -1294,7 +1293,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change']">
           <div class="timeline-icon red">
             <i class="fa fa-minus"></i>
           </div>
@@ -1392,7 +1391,7 @@
           </div>
         </div>
 
-        <div class="timeline-entry" data-category="['staff-change', 'unrest']">
+        <div class="timeline-entry" data-category="['staff-change']">
           <div class="timeline-icon red">
             <i class="fa fa-minus"></i>
           </div>
