--- a/index.html
+++ b/index.html
@@ -1723,7 +1723,7 @@
       </article>
 
       <footer class="page-footer">
-        Text is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>. All image licensing information can be found on the <a rel="license" href="./attribution.html">attribution</a> page.
+        <p>Text is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>. All image licensing information can be found on the <a rel="license" href="./attribution.html">attribution</a> page.</p>
       </footer>
     </section>
 
