--- a/attribution.html
+++ b/attribution.html
@@ -53,6 +53,7 @@
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Koval,_Anna_Aug_2013.jpg">Koval, Anna Aug 2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Hocutt,_Frances_March_2015.jpg">Hocutt, Frances March 2015</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Keyes,_Oliver_January_2016.jpg">Oliver Keyes: Staff photo for Wikimedia Foundation staff page</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://commons.wikimedia.org/wiki/File:Maher,_Katherine_April_2014.jpg">Maher, Katherine April 2014</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
       </ul>
     </section>
   </body>
