--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             <p>Community Engagement team is created in response to Anasuya Sengupta's upcoming departure. The team is led by Luis Villa, who is promoted to Senior Director of Community Engagement. Siko Bouterse is promoted to Director of Community Resources to lead the Grantmaking team.</p>
             <ul>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2015-February/076853.html">Announcement:A new structure for WMF Community Engagement</a></li>
+              <li><a href="https://lists.wikimedia.org/pipermail/wikimediaannounce-l/2015-February/001050.html">Leaving the Wikimedia Foundation</a></li>
             </ul>
           </div>
         </div>
@@ -342,6 +343,7 @@
             <p>Anasuya Sengupta, Senior Director of Grantmaking, leaves the Wikimedia Foundation after three years of employment.</p>
             <ul>
               <li><a href="https://lists.wikimedia.org/pipermail/wikimedia-l/2015-February/076853.html">Lila Tretikov email to <i>Wikimedia-l</i>: Announcement: A new  structure for WMF Community Engagement</a></li>
+              <li><a href="https://lists.wikimedia.org/pipermail/wikimediaannounce-l/2015-February/001050.html">Leaving the Wikimedia Foundation</a></li>
             </ul>
           </div>
         </div>
