--- a/attribution.html
+++ b/attribution.html
@@ -52,7 +52,7 @@
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Villa,_Luis_4.11.2013.jpg">Villa, Luis 4.11.2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Siko_Bouterse-8.jpg">Siko Bouterse-8</a>" by <a href="https://commons.wikimedia.org/wiki/User:Matthew_(WMF)">Matthew (WMF)</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Koval,_Anna_Aug_2013.jpg">Koval, Anna Aug 2013</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
-        <li>"<a href="https://commons.wikimedia.org/wiki/File:Keyes,_Oliver_January_2016.jpg">Oliver Keyes: Staff photo for Wikimedia Foundation staff page</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
+        <li>"<a href="https://www.mollywhite.net/wikimedia-timeline/images/os-keyes.png">Os Keyes</a>" is released under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.</li>
         <li>"<a href="https://commons.wikimedia.org/wiki/File:Maher,_Katherine_April_2014.jpg">Maher, Katherine April 2014</a>" by Myleen Hollero is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC-BY-SA 3.0</a>.</li>
       </ul>
     </section>
